<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/intro"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <!-- EDM category -->
        <FrameLayout
            style="@style/FrameLayoutStyle"
            android:background="#FF3D00">

            <TextView
                android:id="@+id/edm"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/edm" />
        </FrameLayout>

        <!-- Electronic category -->
        <FrameLayout
            style="@style/FrameLayoutStyle"
            android:background="#00E676">

            <TextView
                android:id="@+id/electronic"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/electronic" />
        </FrameLayout>

        <!-- Trap category -->
        <FrameLayout
            style="@style/FrameLayoutStyle"
            android:background="#00B0FF">

            <TextView
                android:id="@+id/trap"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/trap" />
        </FrameLayout>

        <!-- Dubstep category -->
        <FrameLayout
            style="@style/FrameLayoutStyle"
            android:background="#FFEA00">

            <TextView
                android:id="@+id/dubstep"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/dubstep" />
        </FrameLayout>

    </LinearLayout>
</ScrollView>
